--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 username=navneetnishchal1420
 MONGO_URL=mongodb+srv://navneetnishchal1420:J6BJBH8SjctYndmD@cluster0.lknglio.mongodb.net/?retryWrites=true&w=majority
+JWT=mysecretkey@25
